feat: Add personal information service and related components
- Introduced `PersistKey` enum for persistence keys.
- Created `ARIYA_MOHEB` object containing personal information, skills, projects, experiences, and contacts.
- Implemented `PersonalInfoService` to provide access to personal information.
- Added unit tests for `PersonalInfoService`.
- Developed `ImgResolvePipe` for resolving image paths in templates.
- Created `RouteUtils` service for navigating and retrieving activated route information.
- Implemented `UrlUtils` for extracting language and path information from URLs.
- Added `SeoService` for managing SEO aspects, including dynamic hreflang and canonical tags.
- Configured theming with `ThemeService` and default theme settings.
- Created necessary styles and configurations for the application.
- Added main application entry point and updated index.html for SEO and performance optimizations.
- Set up TypeScript configuration for the application and tests.

--- a/angular.json
+++ b/angular.json
@@ -4,7 +4,10 @@
   "cli": {
     "analytics": false,
     "packageManager": "yarn",
-    "schematicCollections": ["@schematics/angular", "@angular-eslint/schematics"]
+    "schematicCollections": [
+      "@schematics/angular",
+      "@angular-eslint/schematics"
+    ]
   },
   "newProjectRoot": "projects",
   "projects": {
@@ -32,7 +35,9 @@
                 "input": "projects/sirine-weslati/public"
               }
             ],
-            "styles": ["projects/sirine-weslati/src/styles.scss"]
+            "styles": [
+              "projects/sirine-weslati/src/styles.scss"
+            ]
           },
           "configurations": {
             "production": {
@@ -91,7 +96,9 @@
                 "input": "projects/sirine-weslati/public"
               }
             ],
-            "styles": ["projects/sirine-weslati/src/styles.scss"],
+            "styles": [
+              "projects/sirine-weslati/src/styles.scss"
+            ],
             "scripts": []
           }
         }
