--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
   "compilerOptions": {
     "baseUrl": "projects",
     "paths": {
-      "@main/*": ["sirine-weslati/src/app/*"]
+      "@main/*": [
+        "sirine-weslati/src/app/*"
+      ]
     },
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
@@ -28,7 +30,10 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": ["ES2022", "dom"]
+    "lib": [
+      "ES2022",
+      "dom"
+    ]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
